provision/k8s/prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: dron-box
  labels:
    app: dron-box
    env: prod
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: dron-box
    env: prod
  loadBalancerIP: auto
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron-box
  labels:
    app: dron-box
    env: prod
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dron-box
      env: prod
  template:
    metadata:
      labels:
        app: dron-box
        env: prod
    spec:
      containers:
      - name: api
        image: registry.gitlab.com/dron-team/dron-box/api:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 0
          limits:
            cpu: 0
      - name: nginx
        image: registry.gitlab.com/dron-team/dron-box/nginx:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          hostPort: 8080
        resources:
          requests:
            cpu: 1m
          limits:
            cpu: 10m
      - name: cache
        image: memcached
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 11211
        resources:
          requests:
            cpu: 1m
          limits:
            cpu: 10m
      imagePullSecrets:
        - name: gitlab-auth
