provision/k8s/stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: dron-box
  labels:
    app: dron-box
    env: stage
  namespace: stage
spec:
  type: LoadBalancer
  selector:
    app: dron-box
    env: stage
  loadBalancerIP: auto
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron-box
  labels:
    app: dron-box
    env: stage
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dron-box
      env: stage
  template:
    metadata:
      labels:
        app: dron-box
        env: stage
    spec:
      containers:
      - name: api
        image: registry.gitlab.com/dron-team/dron-box/api:dev-master
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 0
          limits:
            cpu: 0
      - name: nginx
        image: registry.gitlab.com/dron-team/dron-box/nginx:dev-master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          hostPort: 8081
        resources:
          requests:
            cpu: 1m
          limits:
            cpu: 10m
      - name: cache
        image: memcached
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 11211
        resources:
          requests:
            cpu: 1m
          limits:
            cpu: 10m
      imagePullSecrets:
      - name: gitlab-auth
