provision/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    namespace: prod
spec:
  rules:
    - host: box.dron.digital
      http:
        paths:
          - backend:
              serviceName: dron-box
              servicePort: 8080
# TODO: setting up ingress cross-namespaces
#    - host: box-stage.dron.digital
#      http:
#        paths:
#          - backend:
#              serviceName: dron-box
#              servicePort: 8081
